# retail-recommender-system

./: .gitignore  pyproject.toml
notebooks/: 1_data_exploration.ipynb  2_process_data.ipynb  3_model_training.ipynb  4_image_classification.ipynb  5_model_training_pretrained.ipynb  baseline_dataset_construction.ipynb  baseline_dataset_construction_steam.ipynb  baseline_recommender.ipynb  data_exploration.ipynb  drr.ipynb  evaluation.ipynb  matrix_factorization.ipynb  parse_images_to_tensors.ipynb  sparsify_dataset.ipynb  t.ipynb
notebooks/recsys/: 1_split.ipynb  2_covisitation.ipynb  3_cleora.ipynb  4_random_benchmark.ipynb
retail_recommender_system/: logging.py  training.py  utils.py
retail_recommender_system/data/: loader.py  sparsifier.py
retail_recommender_system/data/datasets/: base.py  hm.py  steam.py
retail_recommender_system/evaluation/: evaluation.py  prediction.py  utils.py
retail_recommender_system/evaluation/metrics/: __init__.py  map.py  ndcg.py  precision.py  recall.py
retail_recommender_system/kaggle/: download.py  upload.py
retail_recommender_system/layers/: dotprod.py  ff.py
retail_recommender_system/models/: deepfm.py  mf.py  mfconv.py  ncf.py
retail_recommender_system/scripts/: loader.py  process.py  process_steam.py  sparsify.py  sparsify_steam.py  train.py
retail_recommender_system/trainer/: base.py  deepfm.py  loader.py  mf.py  mfconv.py  ncf.py
scripts/: train.py
tests/evaluation/: conftest.py  test_evaluation.py  test_metrics.py
